--- a/vercel-frontend.json
+++ b/vercel-frontend.json
@@ -6,6 +6,16 @@
       "use": "@vercel/next"
     }
   ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
+    }
+  ],
   "env": {
     "NEXT_PUBLIC_API_URL": "http://YOUR_EC2_PUBLIC_IP:3001"
   }
