--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,11 @@
     }
   ],
   "env": {
-    "NEXT_PUBLIC_API_URL": "http://YOUR_EC2_PUBLIC_IP:3001"
+    "NEXT_PUBLIC_API_URL": "http://13.239.158.3:3001"
+  },
+  "functions": {
+    "app/page.tsx": {
+      "maxDuration": 30
+    }
   }
 }
