--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "morgan": "^1.10.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "prom-client": "^15.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
