--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "joi": "^17.11.0",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "14.2.13",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "framer-motion": "^11.5.4",
+    "lucide-react": "^0.441.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.5.2",
     "prom-client": "^15.1.0"
   },
   "devDependencies": {
@@ -33,12 +38,12 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "14.2.13",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "postcss": "^8",
     "supertest": "^6.3.3",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5"
   }
 }
