--- a/config/docker/nginx.conf
+++ b/config/docker/nginx.conf
@@ -13,7 +13,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name 35.74.250.160 localhost;
 
         # Frontend routes
         location / {
