--- a/config/docker/docker-compose.grafana.yml
+++ b/config/docker/docker-compose.grafana.yml
@@ -17,7 +17,7 @@ services:
       - '--web.enable-lifecycle'
     restart: unless-stopped
     networks:
-      - monitoring
+      - fare-calculator-network
 
   # Grafana - Visualization
   grafana:
@@ -35,7 +35,7 @@ services:
       - /home/ec2-user/mc-taxi-calculator/monitoring/grafana/dashboards:/var/lib/grafana/dashboards
     restart: unless-stopped
     networks:
-      - monitoring
+      - fare-calculator-network
     depends_on:
       - prometheus
 
@@ -55,7 +55,7 @@ services:
       - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
     restart: unless-stopped
     networks:
-      - monitoring
+      - fare-calculator-network
 
   # cAdvisor - Container metrics
   cadvisor:
@@ -71,12 +71,12 @@ services:
       - /dev/disk/:/dev/disk:ro
     restart: unless-stopped
     networks:
-      - monitoring
+      - fare-calculator-network
 
 volumes:
   prometheus_data:
   grafana_data:
 
 networks:
-  monitoring:
-    driver: bridge
+  fare-calculator-network:
+    external: true
