Update service IP address in MonitoringModal, environment configurations, and API test script to reflect new EC2 instance (35.74.250.160).

--- a/config/deployment/vercel-frontend.json
+++ b/config/deployment/vercel-frontend.json
@@ -17,6 +17,6 @@
     }
   ],
   "env": {
-    "NEXT_PUBLIC_API_URL": "http://YOUR_EC2_PUBLIC_IP:3001"
+    "NEXT_PUBLIC_API_URL": "http://35.74.250.160:3001"
   }
 }
