--- a/env.example
+++ b/env.example
@@ -1,3 +1,4 @@
+## DO NOT PUT ANY SENSITIVE API KEYS OR DATA HERE!!!
 # Database Configuration
 MONGODB_URI=mongodb://localhost:27017/mc-taxi-calculator
 
